k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyletter-tracking-tool
  namespace: dev
  labels:
    app: easyletter-tracking-tool
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
  selector:
    app: easyletter-tracking-tool
