k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sc-scan
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: sc-scan-dev.k8s.postcon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sc-scan
                port:
                  number: 80
